<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="default_engine"
        android:title="@string/default_engine"
        android:entries="@array/engine_names"
        android:entryValues="@array/engine_ids"
        android:defaultValue="baidu" />

    <SwitchPreferenceCompat
        android:key="ad_blocking"
        android:title="@string/ad_blocking"
        android:defaultValue="true" />

    <ListPreference
        android:key="font_size"
        android:title="@string/font_size"
        android:entries="@array/font_size_names"
        android:entryValues="@array/font_size_values"
        android:defaultValue="100" />

    <Preference
        android:key="clear_data"
        android:title="@string/clear_data" />

    <Preference
        android:key="about"
        android:title="@string/about"
        android:summary="LiteBrowse v1.0.0" />
</PreferenceScreen>
